@@ -1,5 +1,6 @@
 2020-01-19  Kirit Saelensminde  <kirit@felspar.com>
- Add conversions between `std` and `boost` `shared_ptr`s.
+ * Coercion should now always work if the to type is constructible from the from type.
+ * Add conversions between `std` and `boost` `shared_ptr`s.
 
 2020-01-15  Kirit Saelensminde  <kirit@felspar.com>
  Improve the `digester` interface to take more string types.
